--- a/blog.html
+++ b/blog.html
@@ -137,16 +137,6 @@
                 </nav>
 
                 <div class="flex items-center gap-4">
-                    <div class="hidden sm:flex gap-2">
-                        <button
-                            class="size-10 flex items-center justify-center rounded-lg bg-[#f0f4f2] dark:bg-white/5 text-[#111813] dark:text-white hover:bg-primary/20 transition-colors">
-                            <i class="bi bi-bell text-[20px]"></i>
-                        </button>
-                        <button
-                            class="size-10 flex items-center justify-center rounded-lg bg-[#f0f4f2] dark:bg-white/5 text-[#111813] dark:text-white hover:bg-primary/20 transition-colors">
-                            <i class="bi bi-gear text-[20px]"></i>
-                        </button>
-                    </div>
 
                     <div class="hidden sm:flex items-center gap-3 pl-4 border-l border-[#f0f4f2] dark:border-white/10">
                         <div class="text-right hidden lg:block">
@@ -223,18 +213,6 @@
                 </a>
             </nav>
 
-            <div class="mt-6 pt-6 border-t border-[#f0f4f2] dark:border-white/10">
-                <div class="flex gap-2">
-                    <button
-                        class="flex-1 flex items-center justify-center gap-2 px-4 py-3 rounded-lg bg-[#f0f4f2] dark:bg-white/5 text-[#111813] dark:text-white">
-                        <i class="bi bi-bell text-[20px]"></i>
-                    </button>
-                    <button
-                        class="flex-1 flex items-center justify-center gap-2 px-4 py-3 rounded-lg bg-[#f0f4f2] dark:bg-white/5 text-[#111813] dark:text-white">
-                        <i class="bi bi-gear text-[20px]"></i>
-                    </button>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -250,11 +228,6 @@
                     e-commerce</p>
             </div>
 
-            <button
-                class="flex items-center gap-2 px-6 h-12 bg-primary text-background-dark rounded-lg text-sm font-bold shadow-lg shadow-primary/20 hover:scale-[1.02] transition-transform active:scale-95">
-                <i class="bi bi-plus-lg text-lg"></i>
-                New Article
-            </button>
         </div>
 
         <!-- Search and Filter -->
@@ -400,10 +373,8 @@
             <div class="blog-card bg-white dark:bg-white/5 rounded-2xl shadow-sm border border-[#f0f4f2] dark:border-white/10 overflow-hidden group hover:shadow-xl transition-all"
                 data-category="technology">
                 <div class="aspect-video bg-[#f0f4f2] dark:bg-white/5 relative overflow-hidden">
-                    <div
-                        class="w-full h-full bg-gradient-to-br from-primary/20 to-blue-500/20 flex items-center justify-center">
-                        <i class="bi bi-laptop text-6xl text-primary"></i>
-                    </div>
+                    <img src="images/blog1.png" alt="Business Tips"
+                        class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
                 </div>
                 <div class="p-5">
                     <div class="flex items-center gap-3 mb-3">
@@ -436,10 +407,8 @@
             <div class="blog-card bg-white dark:bg-white/5 rounded-2xl shadow-sm border border-[#f0f4f2] dark:border-white/10 overflow-hidden group hover:shadow-xl transition-all"
                 data-category="ecommerce">
                 <div class="aspect-video bg-[#f0f4f2] dark:bg-white/5 relative overflow-hidden">
-                    <div
-                        class="w-full h-full bg-gradient-to-br from-purple-500/20 to-pink-500/20 flex items-center justify-center">
-                        <i class="bi bi-cart-check text-6xl text-purple-500"></i>
-                    </div>
+                    <img src="images/blog2.png" alt="Business Tips"
+                        class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
                 </div>
                 <div class="p-5">
                     <div class="flex items-center gap-3 mb-3">
@@ -471,10 +440,8 @@
             <div class="blog-card bg-white dark:bg-white/5 rounded-2xl shadow-sm border border-[#f0f4f2] dark:border-white/10 overflow-hidden group hover:shadow-xl transition-all"
                 data-category="marketing">
                 <div class="aspect-video bg-[#f0f4f2] dark:bg-white/5 relative overflow-hidden">
-                    <div
-                        class="w-full h-full bg-gradient-to-br from-blue-500/20 to-cyan-500/20 flex items-center justify-center">
-                        <i class="bi bi-megaphone text-6xl text-blue-500"></i>
-                    </div>
+                    <img src="images/blog3.png" alt="Business Tips"
+                        class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
                 </div>
                 <div class="p-5">
                     <div class="flex items-center gap-3 mb-3">
@@ -506,10 +473,8 @@
             <div class="blog-card bg-white dark:bg-white/5 rounded-2xl shadow-sm border border-[#f0f4f2] dark:border-white/10 overflow-hidden group hover:shadow-xl transition-all"
                 data-category="business">
                 <div class="aspect-video bg-[#f0f4f2] dark:bg-white/5 relative overflow-hidden">
-                    <div
-                        class="w-full h-full bg-gradient-to-br from-green-500/20 to-emerald-500/20 flex items-center justify-center">
-                        <i class="bi bi-graph-up-arrow text-6xl text-green-500"></i>
-                    </div>
+                    <img src="images/blog1.png" alt="Business Tips"
+                        class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
                 </div>
                 <div class="p-5">
                     <div class="flex items-center gap-3 mb-3">
@@ -601,50 +566,48 @@
         closeMobileMenu.addEventListener('click', closeMobileMenuFunc);
         mobileMenuOverlay.addEventListener('click', closeMobileMenuFunc);
 
-        // Search Functionality
+        // =========================
+        // Search + Category Filter (WORKING)
+        // =========================
         const searchInput = document.getElementById('searchArticle');
-        const blogCards = document.querySelectorAll('.blog-card');
-
-        searchInput.addEventListener('input', function () {
-            const searchTerm = this.value.toLowerCase();
-
-            blogCards.forEach(card => {
-                const text = card.textContent.toLowerCase();
-                if (text.includes(searchTerm)) {
-                    card.style.display = '';
-                } else {
-                    card.style.display = 'none';
-                }
-            });
-        });
-
-        // Category Filter
         const categoryFilter = document.getElementById('categoryFilter');
+        const blogGrid = document.getElementById('blogGrid');
+        const blogCards = Array.from(document.querySelectorAll('.blog-card'));
 
-        categoryFilter.addEventListener('change', function () {
-            const selectedCategory = this.value;
+        // Optional empty state (dibuat via JS, tidak mengubah HTML lain)
+        const emptyState = document.createElement('div');
+        emptyState.id = 'emptyState';
+        emptyState.className = 'col-span-full text-center text-sm text-[#61896f] dark:text-gray-400 py-10 hidden';
+        emptyState.textContent = 'Tidak ada artikel yang cocok.';
+        blogGrid.appendChild(emptyState);
+
+        function applyFilters() {
+            const searchTerm = (searchInput.value || '').trim().toLowerCase();
+            const selectedCategory = categoryFilter.value;
+
+            let visibleCount = 0;
 
             blogCards.forEach(card => {
                 const cardCategory = card.getAttribute('data-category');
-                if (selectedCategory === 'all' || cardCategory === selectedCategory) {
-                    card.style.display = '';
-                } else {
-                    card.style.display = 'none';
-                }
-            });
-        });
+                const text = card.textContent.toLowerCase();
 
-        // Read More Buttons
-        document.querySelectorAll('button').forEach(btn => {
-            if (btn.textContent.includes('Read')) {
-                btn.addEventListener('click', function () {
-                    const articleTitle = this.closest('.blog-card, .bg-white').querySelector('h2, h3').textContent;
-                    const message = `Halo, saya tertarik membaca artikel: ${articleTitle}`;
-                    const whatsappUrl = `https://wa.me/6281234567890?text=${encodeURIComponent(message)}`;
-                    window.open(whatsappUrl, '_blank');
-                });
-            }
-        });
+                const matchCategory = selectedCategory === 'all' || cardCategory === selectedCategory;
+                const matchSearch = searchTerm === '' || text.includes(searchTerm);
+
+                const show = matchCategory && matchSearch;
+                card.style.display = show ? '' : 'none';
+                if (show) visibleCount++;
+            });
+
+            emptyState.classList.toggle('hidden', visibleCount !== 0);
+        }
+
+        // Trigger on input/change
+        searchInput.addEventListener('input', applyFilters);
+        categoryFilter.addEventListener('change', applyFilters);
+
+        // Run once on load
+        applyFilters();
 
         // Scroll to Top Button
         const scrollToTopBtn = document.getElementById('scrollToTop');
